--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -113,7 +113,7 @@
                             <button class="item-picture-button-block-minus" th:onclick="itemMinus([[${el[0]}]])">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="9" viewBox="0 0 9 9" icon="minus"><path d="M9 4v1H0V4z"></path></svg>
                             </button>
-                            <input class="item-picture-button-block-input" value="0">
+                            <input class="item-picture-button-block-input" value="0" readonly>
                             <button class="item-picture-button-block-plus" th:onclick="itemPlus([[${el[0]}]])">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="9" viewBox="0 0 9 9" icon="plus"><path d="M9 4H5V0H4v4H0v1h4v4h1V5h4z"></path></svg>
                             </button>
